Fix dark mode issue in navbar separator
Fixes the separator bar used in the sticky navbar being a light gray
color on dark mode to be a dark gray instead. The light gray is changed
from #c8c8c8 to #c8ccd1 to match an existing Codex color.

--- a/resources/skins.vector.js/stickyHeader.less
+++ b/resources/skins.vector.js/stickyHeader.less
@@ -50,7 +50,7 @@
 	// Components
 	//
 	&-context-bar {
-		border-left: @border-width-base @border-style-base #c8c8c8;
+		border-left: @border-subtle;
 		padding-left: @spacing-search-title-divider;
 		min-width: 0;
 		margin-left: @spacing-search-title-divider;
